--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/genai": "^1.37.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "^19.2.3"
   },
   "devDependencies": {
