--- a/package.json
+++ b/package.json
@@ -9,16 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.37.0",
     "lucide-react": "^0.562.0",
-    "react": "^19.2.3",
-    "react-contenteditable": "^3.3.7",
-    "react-dom": "^19.2.3"
+    "@google/genai": "^1.37.0",
+    "react-dom": "^19.2.3",
+    "react": "^19.2.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
-    "terser": "^5.46.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
